# rsearch

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  plan.md
.github/: copilot-instructions.md
.github/workflows/: publish-pypi.yml  python-wheels.yml
src/: cli.rs  entropy.rs  grammar.rs  heuristics.rs  keyword.rs  lib.rs  main.rs  output.rs  scan.rs  story.rs  utils.rs
